--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,12 @@
 			<groupId>jakarta.ws.rs</groupId>
 			<artifactId>jakarta.ws.rs-api</artifactId>
 			<version>4.0.0</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.6</version>
+		</dependency>	
 	</dependencies>
 
 	<build>
